# tidal-server

./: README.md  stack.yaml  tidal-server.cabal
src/: Main.hs  Server.hs
