name:                tidal-server
version:             0.1.0.0
homepage:            https://github.com/githubuser/tidal-server#readme
license:             BSD3
license-file:        LICENSE
author:              Guy John
maintainer:          guy@rumblesan.com
copyright:           2017 Guy John
category:            Sound
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Server
  build-depends:       base < 5
                     , hint
                     , tidal
  default-language:    Haskell2010

executable tidal-server
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Server
  default-language:    Haskell2010
  build-depends:       base < 5
                     , hint
                     , tidal
